# proof-systems

./: CHANGELOG.md  Cargo.toml  Makefile
.cargo/: config.toml
.github/actions/load-versions/: action.yml
.github/workflows/: ci.yml
arrabbiata/: Cargo.toml
arrabbiata/src/: column.rs  poseidon_3_60_0_5_5_fp.rs  poseidon_3_60_0_5_5_fq.rs
crates/arkworks/: Cargo.toml
curves/: Cargo.toml
groupmap/: Cargo.toml
hasher/: Cargo.toml
hasher/src/: roinput.rs
kimchi/: CHANGELOG.md  Cargo.toml
kimchi-napi/: Cargo.toml
kimchi-napi/src/: oracles.rs  plonk_verifier_index.rs  srs.rs
kimchi-stubs/: Cargo.toml
kimchi-stubs/src/: oracles.rs  pasta_fp_plonk_verifier_index.rs  pasta_fq_plonk_verifier_index.rs
kimchi-wasm/: Cargo.toml
kimchi-wasm/src/: oracles.rs  plonk_verifier_index.rs  rayon.rs  srs.rs
kimchi/src/: alphas.rs  curve.rs  lib.rs  linearization.rs  prover.rs  prover_index.rs  verifier.rs  verifier_index.rs
kimchi/src/circuits/: berkeley_columns.rs  constraints.rs  expr.rs  gate.rs
kimchi/src/circuits/lookup/: constraints.rs  index.rs  lookups.rs
kimchi/src/circuits/lookup/tables/: mod.rs
kimchi/src/circuits/polynomials/: generic.rs  not.rs  permutation.rs  xor.rs
kimchi/src/circuits/witness/: variables.rs
kimchi/src/tests/: and.rs  ec.rs  endomul.rs  endomul_scalar.rs  fixtures.rs  foreign_field_add.rs  foreign_field_mul.rs  framework.rs  generic.rs  keccak.rs  lookup.rs  mod.rs  not.rs  poseidon.rs  range_check.rs  recursion.rs  rot.rs  varbasemul.rs  xor.rs
kimchi/tests/: test_expr.rs
msm/: Cargo.toml
msm/src/: columns.rs
mvpoly/: Cargo.toml
o1vm/: Cargo.toml
plonk-wasm/: Cargo.toml
plonk-wasm/src/: srs.rs
poly-commitment/: Cargo.toml
poly-commitment/src/: combine.rs  hash_map_cache.rs  ipa.rs  kzg.rs  lagrange_basis.rs  lib.rs  precomputed_srs.rs  utils.rs
poseidon/: Cargo.toml
poseidon/export_test_vectors/: Cargo.toml
poseidon/export_test_vectors/test_vectors/: b10_kimchi.js  b10_legacy.js  hex_kimchi.js  hex_legacy.js
poseidon/src/: lib.rs  permutation.rs
poseidon/src/pasta/: fp_kimchi.rs  fp_legacy.rs  fq_kimchi.rs  fq_legacy.rs
signer/: Cargo.toml
tools/kimchi-visu/: Cargo.toml
utils/: Cargo.toml
utils/src/: field_helpers.rs  lazy_cache.rs  lazy_lock.rs  lib.rs
utils/tests/: field_helpers.rs
