[package]
name = "arrabbiata"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "arrabbiata"
path = "src/main.rs"

[dependencies]
ark-ec = { workspace = true, features = ["parallel"] }
ark-ff = { workspace = true, features = ["parallel"] }
ark-poly = { workspace = true, features = ["parallel"] }
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
groupmap = { workspace = true, features = ["parallel"] }
itertools.workspace = true
kimchi.workspace = true
log.workspace = true
mina-curves = { workspace = true, features = ["parallel"] }
mina-poseidon = { workspace = true, features = ["parallel"] }
mvpoly.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
o1-utils.workspace = true
poly-commitment.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
