[package]
name = "kimchi_wasm"
authors = ["opensource@o1labs.org"]
description = "WASM stubs for Kimchi proof systems"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/MinaProtocol/mina"
version.workspace = true

[lib]
name = "kimchi_wasm"
crate-type = ["cdylib", "rlib"]

################################# Dependencies ################################

[dependencies]
base64.workspace = true
console_error_panic_hook.workspace = true
getrandom = { workspace = true, features = ["js"] }
js-sys.workspace = true
libc.workspace = true
num-bigint.workspace = true
paste.workspace = true
rand.workspace = true
rayon.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
serde_with.workspace = true
spmc.workspace = true
wasm-bindgen.workspace = true

# arkworks
ark-ec = { workspace = true, features = ["parallel"] }
ark-ff = { workspace = true, features = ["parallel", "asm"] }
ark-poly = { workspace = true, features = ["parallel"] }
ark-serialize.workspace = true

# proof-systems
arkworks.workspace = true
groupmap = { workspace = true, features = ["parallel"] }
kimchi = { workspace = true, features = ["wasm_types"] }
mina-curves = { workspace = true, features = ["parallel"] }
mina-poseidon = { workspace = true, features = ["default"] }
o1-utils = { workspace = true }
poly-commitment = { workspace = true }
wasm-types.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[features]
nodejs = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
#wasm-opt = ["-O4", "--detect-features", "--enable-mutable-globals" ]
#wasm-opt = ["-O4", "--enable-mutable-globals"]
