[package]
name = "mina-signer"
description = "The mina signer"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ark-ec = { workspace = true, features = ["parallel"] }
ark-ff = { workspace = true, features = ["parallel"] }
bitvec.workspace = true
blake2.workspace = true
bs58.workspace = true
hex.workspace = true
mina-curves = { workspace = true, features = ["parallel"] }
mina-hasher.workspace = true
num-bigint.workspace = true
o1-utils.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
