[package]
name = "o1-utils"
description = "Set of utility extending arkworks"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tikv-jemalloc-ctl = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }

[dependencies]
# ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
bcs.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
rand.workspace = true
rayon = { workspace = true, optional = true }
rmp-serde = { workspace = true, optional = true }
rustversion.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_with.workspace = true
sha2.workspace = true
spin = { version = "0.10", default-features = false, features = ["lazy"] }
thiserror.workspace = true

[dev-dependencies]
ark-ec = { workspace = true, features = ["parallel"] }
mina-curves = { workspace = true, features = ["parallel"] }
serde_json.workspace = true
secp256k1.workspace = true

[features]
default = ["std", "parallel"]
std = ["rmp-serde", "serde_json", "rand/std"]
parallel = [
  "std",
  "rayon",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "ark-poly/parallel",
]
diagnostics = ["tikv-jemalloc-ctl", "tikv-jemallocator"]
