[package]
name = "arkworks"
edition.workspace = true
version.workspace = true

[features]
default = ["wasm"]
wasm = []
std = []

[dependencies]
# arkworks
ark-ec = { workspace = true, features = ["parallel"] }
ark-ff = { workspace = true, features = ["parallel"] }
ark-poly = { workspace = true, features = ["parallel"] }
ark-serialize.workspace = true

# proof-systems
mina-curves = { workspace = true, features = ["parallel"] }
num-bigint.workspace = true
rand.workspace = true
wasm-bindgen.workspace = true
wasm-types.workspace = true
