[package]
name = "kimchi-visu"
description = "A tool to visualize circuits in HTML"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ark-ec = { workspace = true, features = ["parallel"] }
ark-ff = { workspace = true, features = ["parallel"] }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tinytemplate.workspace = true

kimchi.workspace = true
mina-curves = { workspace = true, features = ["parallel"] }
mina-poseidon = { workspace = true, features = ["parallel"] }
o1-utils.workspace = true
poly-commitment.workspace = true
